# nes

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: apu.h  cart.h  cpu.h  mappers.h  mem.h  periphs.h  ppu.h  utils.h  vac.h
src/: CMakeLists.txt  _cpu.h  apu.c  cart.c  cpu.c  mem.c  nes.c  periphs.c  ppu.c  utils.c  vac.c
src/mappers/: CMakeLists.txt  map000.c  map001.c  map002.c
